Markdown add spaces

--- a/di-13-zhang-freebsd-te-se/di-13.6-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
+++ b/di-13-zhang-freebsd-te-se/di-13.6-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
@@ -208,7 +208,7 @@ cat content.list | sed -e 's/libc\///' -e 's/\/.*$//' | uniq |sort > level1.list
 # 生成 level2.list 作为 2 级目录使用，格式 路径：标题
 # 内层循环按 level1 分组抽取文档标题
 # 外层循环对每个分组按标题排序后写入 level2.list
-cat /dev/null >level2.list      # 清空 level2.list ,因为我在反复操作，先清空
+cat /dev/null >level2.list      # 清空 level2.list。因为我在反复操作，先清空
 for i in `cat level1.list `;do
     cat /dev/null >level15.list
     for j in `grep "libc/$i" content.list`;do
@@ -269,7 +269,7 @@ groff -T ps -ms toc.mdoc > toc.ps   # 目录转成 ps 格式
 
 ###########################################################################################
 
-# 每个文档转成 ps 格式，并拼接成一个文档，Dd（document date）标记替换成__PAGENO__，以供后面用页码替换
+# 每个文档转成 ps 格式，并拼接成一个文档，Dd（document date）标记替换成 __PAGENO__，以供后面用页码替换
 for lv2 in `cat level2.list | cut -d: -f1`;do
         cat $lv2 | sed -e 's/^\.Dd.*$/\.Dd __PAGENO__/'  -e '/\.Os.*/d' | mandoc -T ps >> libc.ps
 done
