--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -82,7 +82,7 @@ prometheus 监控部署如图
 
 ### prometheus
 
-   prometheus 的主要配置文件是 `/usr/local/etc/prometheus.yml`,在其中找到：
+   prometheus 的主要配置文件是 `/usr/local/etc/prometheus.yml`，在其中找到：
 
 ```yml
 scrape_configs:
