--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -42,7 +42,7 @@ Music Player Daemon (MPD) 是一个灵活、强大且可扩展的音乐播放器
 
 支持 DSD 的声卡或 DAC，一个 DSD 音频文件。
 
-以下基于 FreeBSD 14.0，外置 DAC 使用海贝 R3（声卡设置基本类似）,使用 oss 驱动。
+以下基于 FreeBSD 14.0，外置 DAC 使用海贝 R3（声卡设置基本类似），使用 oss 驱动。
 
 ### 安装
 
@@ -88,7 +88,7 @@ dev.pcm.2.play.vchanmode: vchan format/rate selection: 0=fixed, 1=passthrough, 2
 ```
 
 - 因为使用的 oss 驱动，muscipd 只能用 dop 传输模式，dop 模式要求开启 bitperfect
-- 采样率 (vchanrate),DSD 采样率为 44.1khz 的倍数，所以不要设为 48khz 的倍数不然会有杂音，在可能的情况下设置为最高，这里是 352.8khz。
+- 采样率 (vchanrate)，DSD 采样率为 44.1khz 的倍数，所以不要设为 48khz 的倍数不然会有杂音，在可能的情况下设置为最高，这里是 352.8khz。
 - 0（fixed）：在此模式下，音频设备使用固定的采样率和格式来处理多路音频流。1（passthrough）：在此模式下，音频设备尽可能地保持输入音频流的原始采样率和格式。2（adaptive）：在此模式下，音频设备会根据需要自动适应和转换输入音频流的采样率和格式。
 
 >**技巧**
@@ -162,7 +162,7 @@ audio_output {
 
 ### 客户端使用
 
-可以使用 ncmpc (字符界面）,MaximumMPD（iphone）等客户端，客户端有很多。
+可以使用 ncmpc (字符界面），MaximumMPD（iphone）等客户端，客户端有很多。
 
 pc 端 GUI 建议使用 cantata (`pkg install cantata`)
 
