--- a/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
@@ -24,7 +24,7 @@ table <jails> persist
 nat pass on em0 inet from <jails> to any -> em0
 ```
 
-在防火墙中建立名为 jails 的表，并指定 persist 标志使防火墙总是保持这个表（即使没有相关的规则引用它）。表是 pf 防火墙的一种命名结构，可以保存地址和网络的集合。jails 表中的地址可以通过 NAT 访问网络。jails 表可以用 `pfctl` 进行增减以达到控制网络访问的目的。如 `pfctl -t jails -T add 192.168.5.1` 把`192.168.5.1` 加入 jails 表使其可以访问网络，`pfctl -t jails -T delete 192.168.5.1` 把 `192.168.5.1` 移出 jails 表使其不能访问网络。特点是手动管理麻烦，但灵活
+在防火墙中建立名为 jails 的表，并指定 persist 标志使防火墙总是保持这个表（即使没有相关的规则引用它）。表是 pf 防火墙的一种命名结构，可以保存地址和网络的集合。jails 表中的地址可以通过 NAT 访问网络。jails 表可以用 `pfctl` 进行增减以达到控制网络访问的目的。如 `pfctl -t jails -T add 192.168.5.1` 把 `192.168.5.1` 加入 jails 表使其可以访问网络，`pfctl -t jails -T delete 192.168.5.1` 把 `192.168.5.1` 移出 jails 表使其不能访问网络。特点是手动管理麻烦，但灵活
 
 **方法二：**
 
@@ -92,6 +92,7 @@ I: Extracting util-linux...
 I: Extracting util-linux-extra...
 I: Extracting zlib1g...
 root@freebsd:/root #
+
 ```
 
 **注意** ：这里可能会提示有错误，无视即可。
@@ -102,7 +103,7 @@ root@freebsd:/root #
 
 #### 建立实例的基本配置
 
-创建 `/etc/fstab.debian`,内容如下：
+创建 `/etc/fstab.debian`，内容如下：
 
 ```sh
 devfs      /usr/jails/debian/dev      devfs       rw                      0  0
@@ -137,14 +138,14 @@ debian {                               # jail 名
 }
 ```
 
-`exec.start` 指定启动 jail 时运行的命令，如果是 freebsd 做 jail 一般是 `exec.start = 'sh /etc/rc'` ,即使用 FreeBSD 的 rc 系统启动服务，但是 debian 中使用的是 systemd 作为 init 系统。jail 并不能使用 systemd，所以不能使用相应的命令（service 命令可用），所以在这里用 `/bin/true` 不做任何事安全的返回 true 就可以。问题就是（以 sshd 服务为例）在 debian jail 中启用 sshd 服务后（ `service ssh start` ）,如果重启 debian jail 那么 sshd 服务不会再次随 jail 启动而启动，这时可以写成 `exec.start = 'service ssh start'` ,这样启动 debian jail 时可以启动 sshd 服务，如果要启用更多的服务，则可以编写如下：
+`exec.start` 指定启动 jail 时运行的命令，如果是 freebsd 做 jail 一般是 `exec.start = 'sh /etc/rc'` , 即使用 FreeBSD 的 rc 系统启动服务，但是 debian 中使用的是 systemd 作为 init 系统。jail 并不能使用 systemd，所以不能使用相应的命令（service 命令可用），所以在这里用 `/bin/true` 不做任何事安全的返回 true 就可以。问题就是（以 sshd 服务为例）在 debian jail 中启用 sshd 服务后（ `service ssh start` ）, 如果重启 debian jail 那么 sshd 服务不会再次随 jail 启动而启动，这时可以写成 `exec.start = 'service ssh start'` , 这样启动 debian jail 时可以启动 sshd 服务，如果要启用更多的服务，则可以编写如下：
 
 ```sh
 exec.start += 'service ssh start'
 exec.start += 'service dbus start'
 ```
 
-`exec.stop` 停止 jail 时运行的命令，如果是 freebsd 做 jail 一般是 `sh /etc/rc.shutdown jail`,这里同样因为 systemd 的原因用 `/bin/true` 安全的返回 true 就可以
+`exec.stop` 停止 jail 时运行的命令，如果是 freebsd 做 jail 一般是 `sh /etc/rc.shutdown jail`, 这里同样因为 systemd 的原因用 `/bin/true` 安全的返回 true 就可以
 
 #### 启用实例并允许网络访问
 
@@ -216,7 +217,7 @@ ubuntu jail 建立方法同上，以 Ubuntu 22.04(jammy) 为例，
 # debootstrap jammy /usr/jails/ubuntu https://mirrors.ustc.edu.cn/ubuntu/
 ```
 
-创建 `/etc/fstab.ubuntu`,内容如下：
+创建 `/etc/fstab.ubuntu`，内容如下：
 
 ```sh
 devfs      /usr/jails/ubuntu/dev      devfs       rw                      0  0
@@ -254,7 +255,7 @@ ubuntu {
 # jail -c ubuntu # 启用实例
 ```
 
-如果已经在 `/etc/rc.conf` 中设置 `jail_enable=YES`,也可以用
+如果已经在 `/etc/rc.conf` 中设置 `jail_enable=YES`，也可以用
 
 ```sh
 # service jail start ubuntu
@@ -311,7 +312,7 @@ AntiX linux 提供四个镜像版本，full、base、core、net，这里下载 c
 
 ### 配置 Antix jail
 
-创建 `/etc/fstab.antix`,内容如下：
+创建 `/etc/fstab.antix`，内容如下：
 
 ```sh
 devfs      /usr/jails/antix/dev      devfs       rw                      0  0
@@ -381,7 +382,7 @@ root@antix:/# mandb       # apt upgrade 的时候显示 mandb 有几个权限错
 # touch /usr/jails/alpine/dev/fd
 ```
 
-创建 `/etc/fstab.alpine`,内容如下：
+创建 `/etc/fstab.alpine`，内容如下：
 
 ```sh
 devfs      /usr/jails/alpine/dev      devfs       rw                      0  0
@@ -429,7 +430,7 @@ alpine {
 现在进入 jail：
 
 ```sh
-freebsd # jexec alpine /bin/sh        # 初始只有 sh ,注意 shell 提示符变化
+freebsd # jexec alpine /bin/sh        # 初始只有 sh，注意 shell 提示符变化
 alpine # sed  -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/' /etc/apk/repositories    # 修改镜像地址
 alpine # echo 'nameserver 223.5.5.5' >> /etc/resolv.conf      #  初始没有这个文件，自建一个
 alpine # apk update             # alpine 可以不使用 openrc 而使用程序，但是不能启动各种服务，只有在安装 openrc 后才能启动各项服务，所以最好安装 openrc 以获得更好的体验
@@ -481,9 +482,10 @@ root@freebsd:~ # jls
      3  192.168.5.2     alpine                        /usr/jails/alpine
      4  192.168.5.1     freebsd-jail                  /usr/jails/freebsd-jail
 root@freebsd:~ #
+
 ```
 
-4 个 jail 各自安装 xclock,firefox，chrome,jwm 这些软件在 freebsd-jail, debian ,ubuntu ,alpine( alpine 使用 vnc 方法不成功，其它方法 xclock，xterm 可运行，firefox 和 chrome 未成功) 都有成功，jwm 用于美化。注意不用安装 xorg。
+4 个 jail 各自安装 xclock、firefox、chrome、jwm 这些软件在 freebsd-jail、debian、ubuntu、alpine( alpine 使用 vnc 方法不成功，其它方法 xclock、xterm 可运行，firefox 和 chrome 未成功) 都有成功，jwm 用于美化。注意不用安装 xorg。
 
 其中 ubuntu 22.04 中 firefox、chrome 要求用 snap 安装，snap 需要 systemd，不能使用，所以使用 deb 包安装。方法如下：
 
@@ -506,7 +508,7 @@ MobaXterm 默认配置，不做多余配置。
 登录 jail（不限方式，可以是 ssh，可以是 jexec 进入，不限用户，可以是普通用户，不一定是 root、wheel 组成员）
 
 ```sh
-$ export DISPLAY=192.168.56.1:0.0  # jail 中，这里是 sh/zsh/bash,csh/tcsh 可以是 setenv DISPLAY 192.168.56.1:0.0，以下不再说明
+$ export DISPLAY=192.168.56.1:0.0  # jail 中，这里是 sh/zsh/bash、csh/tcsh 可以是 setenv DISPLAY 192.168.56.1:0.0，以下不再说明
 $ xclock&
 ```
 
@@ -516,7 +518,7 @@ $ xclock&
 
 ### 内嵌 X Server
 
-X Server 里的 X Server，这里使用 Xnest/Xephyr,Xnest/Xephyr 对 X11 应用来说是 X Server，对宿主 X Server 来说是 X Client。
+X Server 里的 X Server，这里使用 Xnest/Xephyr、Xnest/Xephyr 对 X11 应用来说是 X Server，对宿主 X Server 来说是 X Client。
 
 宿主机里安装 Xnest 或 Xephyr 两者择其一即可
 
@@ -561,13 +563,13 @@ $ xhost +
 
 关闭访问控制
 
-然后在 jail 的 `fstab` 中加入下面内容，这里以 ubuntu jail 的 `fstab` 为例 ,其它 jail 参照修改就行
+然后在 jail 的 `fstab` 中加入下面内容，这里以 ubuntu jail 的 `fstab` 为例，其它 jail 参照修改就行
 
 ```sh
 /tmp/.X11-unix   /usr/jails/ubuntu/tmp/.X11-unix    nullfs   ro   0  0
 ```
 
-必要时先 `mkdir -p /usr/jails/ubuntu/tmp/.X11-unix`,确保有挂载点
+必要时先 `mkdir -p /usr/jails/ubuntu/tmp/.X11-unix`，确保有挂载点
 
 重启 jail 后，在 jail 中执行
 
