--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
@@ -103,7 +103,7 @@ call plug#end()
 
 如此可在 coc 可以用 `/usr/local/include` 下的头文件可以补全。
 
-对于复杂的项目，使用 `compile_commands.json` 文件设置补全。clangd 会在你文件的父目录中查找，也会在名为 build/ 的子目录中查找。例如，正在编辑 `$SRC/gui/window.cpp`, 会查找 `$SRC/gui/`, `$SRC/gui/build/`, `$SRC/`, `$SRC/build/`,等
+对于复杂的项目，使用 `compile_commands.json` 文件设置补全。clangd 会在你文件的父目录中查找，也会在名为 build/ 的子目录中查找。例如，正在编辑 `$SRC/gui/window.cpp`, 会查找 `$SRC/gui/`, `$SRC/gui/build/`, `$SRC/`, `$SRC/build/` 等
 
 以基于 CMake 的项目为例，在项目文件夹下
 
@@ -181,7 +181,7 @@ augroup END
 
 第一句 Glaive 语句设置用于设置 clang-format 执行文件路径。
 
-第二句 Glaive 语句设置格式化的风格样式。也可以设为`"file"`或`"file:<format_file_path>"`。参考[格式](https://clang.llvm.org/docs/ClangFormatStyleOptions.html)
+第二句 Glaive 语句设置格式化的风格样式。也可以设为 `"file"` 或 `"file:<format_file_path>"`。参考 [格式](https://clang.llvm.org/docs/ClangFormatStyleOptions.html)
 
 第一句 autocmd 设置在文件为类型是 c/cpp 时启用 vim-codefmt 的 AutoFormatBuffer clang-format。
 
@@ -317,7 +317,7 @@ $ cd /home/j/project/build
 $ cmake ..
 ```
 
-生成程序文件 `/home/j/project/build/src/test` ,运行之
+生成程序文件 `/home/j/project/build/src/test`，运行之
 
 ![](../.gitbook/assets/ccenv6.png)
 
