--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -143,7 +143,7 @@ s.t. C4: 0.1*x1 + 0.07*x2 + 0.03*x3 + 0.05*x4 + 0.02*x5 <= 0.04*(x1 + x2 + x3 + 
 end;
 ```
 
-保存后，终端输入 `$ glpsol -m example -o example.out`,打开 **example.out** 文件可查看解答值为：x3 = 720，x5 = 480，其余各项值为 0。
+保存后，终端输入 `$ glpsol -m example -o example.out`，打开 **example.out** 文件可查看解答值为：x3 = 720，x5 = 480，其余各项值为 0。
 
 问题解决。
 
@@ -318,7 +318,7 @@ end;
 
 ## 统筹学
 
-上一节我们使用 GLPK 求解线性规划问题，本节我们使用性能更加强大的 wxMaxima 来解决问题。以下代码仅供参考，如果想深入了解，可查看[官方文档](https://maxima.sourceforge.io/docs/manual/index.html)。
+上一节我们使用 GLPK 求解线性规划问题，本节我们使用性能更加强大的 wxMaxima 来解决问题。以下代码仅供参考，如果想深入了解，可查看 [官方文档](https://maxima.sourceforge.io/docs/manual/index.html)。
 
 ```sh
 load("simplex")$
