--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -386,6 +386,7 @@ echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian 12 bookwor
 - 直接执行软件包名 `# gedit`；
 - `whereis 软件包名`，定位后执行。`whereis gedit`；
 - 通过 `find` 命令全局查找 `# find / —name 软件包名`——`# find / —name gedit`。
+- 通过软件图标定位，找到路径 `/usr/share/applications`,根据软件包名找到软件，用文本编辑器（如 `ee`、`nano`）打开。（软件图标本质上是一个文本文件，不是软连接或者图片），找到程序运行的命令复制到终端运行即可；
 
 > 如何查找软件？
 >
