--- a/di-21-zhang-linux-jian-rong-ceng/di-21.7-jie-linux-jian-rong-ceng-ji-yu-gentoo-linux.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.7-jie-linux-jian-rong-ceng-ji-yu-gentoo-linux.md
@@ -327,7 +327,7 @@ echo " I will run emerge-webrsync"
 chroot ${rootdir} /bin/bash -c "emerge-webrsync"
     
     echo "all done."
-
+    echo "Now you can run '#chroot /compat/gentoo/ /bin/bash' Into gentoo"
                 ;;
 esac
 ```
