--- a/di-21-zhang-linux-jian-rong-ceng/di-21.7-jie-linux-jian-rong-ceng-ji-yu-gentoo-linux.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.7-jie-linux-jian-rong-ceng-ji-yu-gentoo-linux.md
@@ -61,7 +61,7 @@ FEATURES="-ipc-sandbox -mount-sandbox -network-sandbox -pid-sandbox -xattr -sand
 # ee /compat/gentoo/etc/portage/repos.conf/gentoo.conf # 此处位于 FreeBSD！
 ```
 
-把`sync-uri = rsync://rsync.gentoo.org/gentoo-portage` 修改为 `sync-uri = rsync://mirrors.tuna.tsinghua.edu.cn/gentoo-portage`
+把 `sync-uri = rsync://rsync.gentoo.org/gentoo-portage` 修改为 `sync-uri = rsync://mirrors.tuna.tsinghua.edu.cn/gentoo-portage`。
 
 ```sh
 # chroot /compat/gentoo /bin/bash # 此处位于 Gentoo!
@@ -328,7 +328,6 @@ chroot ${rootdir} /bin/bash -c "emerge-webrsync"
     
     echo "all done."
     echo "Now you can run '#chroot /compat/gentoo/ /bin/bash' Into gentoo"
-
                 ;;
 esac
 ```
