--- a/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
@@ -32,9 +32,9 @@
 ```
 
 ```sh
-# cd /home/ykla
-# fetch http://mirrors.cqu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.gz
-# tar xpvf archlinux-bootstrap-x86_64.tar.gz -C /compat --numeric-owner # 若有报错 exit 请无视之。-
+# mkdir -p /compat
+# fetch http://mirrors.cqu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst
+# tar --use-compress-program=unzstd -xpvf archlinux-bootstrap-x86_64.tar.zst -C /compat --numeric-owner # 若有报错 tar: Error exit delayed from previous errors. 请无视之。-
 # mv /compat/root.x86_64 /compat/arch # 重命名 /
 ```
 
@@ -162,7 +162,7 @@ Server = https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
 #/bin/sh
 
 rootdir=/compat/arch
-url="http://mirrors.cqu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.gz"
+url="https://mirrors.cqu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst"
 
 echo "begin to install archlinux ..."
 echo "check modules ..."
@@ -218,7 +218,8 @@ service dbus start
 echo "now we will bootstrap archlinux"
 
 fetch ${url}
-tar xpvf archlinux-bootstrap-x86_64.tar.gz -C /compat --numeric-owner
+mkdir /compat
+tar --use-compress-program=unzstd -xpvf archlinux-bootstrap-x86_64.tar.zst -C /compat --numeric-owner
 rm archlinux-bootstrap-x86_64.tar.gz
 mv /compat/root.x86_64 ${rootdir}
 
@@ -312,5 +313,5 @@ echo "Now you can run '#chroot /compat/arch/ /bin/bash' Into ArchLinux"
 
 ## 参考文献
 
-- [linux --	Linux ABI support](https://man.freebsd.org/cgi/man.cgi?linux(4))
+- [linux --Linux ABI support](https://man.freebsd.org/cgi/man.cgi?linux(4))
 
