using archlinux-bootstrap-x86_64.tar.zst now

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
@@ -220,7 +220,7 @@ echo "now we will bootstrap archlinux"
 fetch ${url}
 mkdir /compat
 tar --use-compress-program=unzstd -xpvf archlinux-bootstrap-x86_64.tar.zst -C /compat --numeric-owner
-rm archlinux-bootstrap-x86_64.tar.gz
+rm archlinux-bootstrap-x86_64.tar.zst
 mv /compat/root.x86_64 ${rootdir}
 
 if [ ! "$(sysrc -f /boot/loader.conf -qn nullfs_load)" = "YES" ]; then
