--- a/di-25-zhang-twincatbsd/di-25.1-jie-xi-tong-an-zhuang-yu-ji-ben-pei-zhi.md
+++ b/di-25-zhang-twincatbsd/di-25.1-jie-xi-tong-an-zhuang-yu-ji-ben-pei-zhi.md
@@ -151,9 +151,9 @@ doas su
 
 使用 `ifconfig` 查看当前 IP，然后打开主机的浏览器输入：
 
-<https://aaa.bbb.xxx.yyy> （**需要把 `aaa`、`bbb`、`xxx` 和 `yyy` 替换成你 `ifconfig` 后输出的内容！**）
+`ifconfig` 输出的 IP 内容！
 
-我这里 `ifconfig` 显示的 ip 为 `192.168.245.138`，则我应该访问的地址为：<https://192.168.245.138>。（注意是 **https** 不是 http，后者无法访问！）
+我这里 `ifconfig` 显示的 ip 为 `192.168.245.138`，则我应该访问的地址为：`https://192.168.245.138`。（注意是 **https** 不是 http，后者无法访问！）
 
 输入用户名 `Administrator` 和密码即可登录：
 
