--- a/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
@@ -301,8 +301,8 @@ AntiX 基于 debian，并且不使用 systemd。
 AntiX linux 提供四个镜像版本，full、base、core、net，这里下载 core 版本：
 
 ```sh
-# fetch https://mirrors.tuna.tsinghua.edu.cn/mxlinux-isos/ANTIX/Final/antiX-22/antiX-22_x64-core.iso
-# mdconfig antiX-22_x64-core.iso
+# fetch https://mirrors.tuna.tsinghua.edu.cn/mxlinux-isos/ANTIX/Final/antiX-23.2/antiX-23.2_x64-core.iso
+# mdconfig antiX-23.2_x64-core.iso
 # mount -t cd9660 /dev/md0 /mnt
 # mkdir -p /usr/jails/antix
 # unsquashfs -d /usr/jails/antix /mnt/antiX/linuxfs
