--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -318,7 +318,7 @@ end;
 
 ## 统筹学
 
-上一节我们使用 GLPK 求解线性规划问题，本节我们使用性能更加强大的 wxMaxima 来解决问题。以下代码仅供参考，如果想深入了解，可查看 [官方文档](https://maxima.sourceforge.io/docs/manual/index.html)。
+上一节我们使用 GLPK 求解线性规划问题，本节我们使用性能更加强大的 wxMaxima 来解决问题。以下代码仅供参考，如果想深入了解，可查看 [官方文档](https://maxima.sourceforge.io/documentation.html)。
 
 ```sh
 load("simplex")$
