--- a/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
@@ -8,7 +8,7 @@
 
 >**技巧**
 >
->如果是 root 过的 Android 设备，还可以通过数据线共享手机的 VPN 给 FreeBSD 设备。参见软件 [VPN 热点](https://play.google.com/store/apps/details?id=be.mygod.vpnhotspot&hl=zh&pli=1)。使用方法参见 [VPN Hotspot](https://docs.cloud-atlas.io/discovery/android/hack/vpn_hotspot.html)。
+>如果是 root 过的 Android 设备，还可以通过数据线共享手机的 VPN 给 FreeBSD 设备。参见软件 [VPN 热点](https://play.google.com/store/apps/details?id=be.mygod.vpnhotspot&hl=zh&pli=1)。使用方法参见 [通过创建 Wifi 热点来共享 V2ray 代理](https://www.sainnhe.dev/post/v2ray-hotspot/)。
 
 首先加载内核模块（旧版本需要）；
 
