--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.2-jie-nginx.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.2-jie-nginx.md
@@ -47,7 +47,7 @@ root     nginx       1153 6   tcp4   *:80                  *:*
 
 ## 配置文件
 
-配置教程可参阅[官方文档](https://nginx.org/en/docs/) 与 [官方维基](https://wiki.nginx.org/Configuration)。
+配置教程可参阅[官方文档](https://nginx.org/en/docs/) 。
 
 本文仅简单说明 FreeBSD 中如何启动 Nginx 及 Nginx 的配置文件。
 
