archlinux-bootstrap-x86_64.tar.zst

--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
@@ -9,8 +9,9 @@
 ```shell
 # service linux enable
 # service linux start
-# fetch -o /tmp https://mirrors.cernet.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.gz
-# tar -C /tmp -xpf /tmp/archlinux-bootstrap-x86_64.tar.gz || true
+# fetch -o /tmp https://mirrors.bfsu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst
+# tar --use-compress-program=unzstd -xpvf archlinux-bootstrap-x86_64.tar.zst -C /tmp --numeric-owner
+# rm archlinux-bootstrap-x86_64.tar.zst
 # cp -Rf /tmp/root.x86_64/* /compat/linux
 ```
 
