--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
@@ -115,14 +115,14 @@ FREEBSD_PKG_MIRROR="https://mirrors.cernet.edu.cn/FreeBSD-pkg"
 umount -Af
 
 rm -Rf /compat/linux
-rm -Rf /tmp/archlinux-bootstrap-x86_64.tar.gz
+rm -Rf /tmp/archlinux-bootstrap-x86_64.tar.zst
 rm -Rf /tmp/root.x86_64
 
 service linux enable
 service linux start
 
-fetch -o /tmp "$ARCHLINUX_MIRROR/iso/latest/archlinux-bootstrap-x86_64.tar.gz"
-tar -C /tmp -xpf /tmp/archlinux-bootstrap-x86_64.tar.gz || true
+fetch -o /tmp "$ARCHLINUX_MIRROR/iso/latest/archlinux-bootstrap-x86_64.tar.zst"
+tar --use-compress-program=unzstd -xpvf archlinux-bootstrap-x86_64.tar.zst -C /tmp --numeric-owner
 cp -Rf /tmp/root.x86_64/* /compat/linux
 
 cat >/compat/linux/etc/pacman.conf <<EOF
@@ -164,7 +164,7 @@ pkg upgrade -y git bash vim htop tmux llvm bear
 code-server --install-extension llvm-vs-code-extensions.vscode-clangd
 code-server --install-extension mhutchie.git-graph
 
-rm -Rf /tmp/archlinux-bootstrap-x86_64.tar.gz
+rm -Rf /tmp/archlinux-bootstrap-x86_64.tar.zst
 rm -Rf /tmp/root.x86_64
 ```
 
