--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
@@ -2,7 +2,7 @@
 
 >**注意**
 >
->**本章节来自网络，可能存在版权问题。**
+>**本章节来自网络，可能存在版权问题。** 本文出处是 <https://tieba.baidu.com/p/8351273539>
 
 PF（Packet Filter）是一款由 OpenBSD 移植而来的防火墙，提供了大量功能，包括 ALTQ (Alternate Queuing，交错队列) 等。以下仅供参考，未经测试。
 
