--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
@@ -2,7 +2,7 @@
 
 >**警告**
 >
->**本章节来自网络，可能存在版权问题；且未经验证，并不可靠。**
+>**本章节来自网络，可能存在版权问题；且未经验证，并不可靠。** 本文出处是 <https://tieba.baidu.com/p/8351273539>
 
 
 IPFIREWALL (IPFW) 是一款由 FreeBSD 发起的防火墙应用软件，它由 FreeBSD 项目编写和维护。
