--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.4-jie-ipfilter-ipf.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.4-jie-ipfilter-ipf.md
@@ -2,7 +2,7 @@
 
 >**注意**
 >
->**本章节来自网络，可能存在版权问题。**
+>**本章节来自网络，可能存在版权问题。** 本文出处是 <https://tieba.baidu.com/p/8351273539>
 
 IPF 是一款开源软件，作者 Darren Reed。以下仅供参考未经测试。
 
