--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
@@ -325,3 +325,8 @@ $ cmake ..
 
 ![](../.gitbook/assets/ccenv7.png)
 ![](../.gitbook/assets/ccenv8.png)
+
+## 资源
+
+- [algcl](https://github.com/Jianping-Duan/algcl)，一些可直接运行于 FreeBSD 的 C 语言算法与数据结构编程实例。
+  
