--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -1,2 +1,21 @@
 # 第 15.5 节 Fail2Ban
 
+根据开发者[官方说明](https://github.com/fail2ban/fail2ban)，Fail2Ban 可封禁多次身份验证错误的主机。几乎完全由 Python 写就（Python 96.0%）。
+
+## 安装 Fail2Ban
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install security/py-fail2ban
+```
+
+- 使用 Ports：
+
+```sh
+# cd /usr/ports/security/py-fail2ban/ 
+# make install clean
+```
+
+## 配置 Fail2Ban
+
