--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -1,6 +1,6 @@
 # 第 15.5 节 Fail2Ban
 
-根据开发者[官方说明](https://github.com/fail2ban/fail2ban)，Fail2Ban 可封禁多次身份验证错误的主机。几乎完全由 Python 写就（Python 96.0%）。
+根据开发者[官方说明](https://github.com/fail2ban/fail2ban)，Fail2Ban 可封禁多次身份验证错误的主机，[即通过更新系统防火墙规则来拒绝来自那些 IP 地址的新连接](https://github.com/fail2ban/fail2ban/wiki/How-fail2ban-works)。Fail2Ban 几乎完全由 Python 写就（Python 96.0%）。
 
 ## 安装 Fail2Ban
 
@@ -17,5 +17,120 @@
 # make install clean
 ```
 
-## 配置 Fail2Ban
+- 配置服务：
+
+```
+# service fail2ban enable
+```
+
+## 查看安装后说明
+
+```sh
+root@ykla:/home/ykla # pkg info -D security/py-fail2ban
+py311-fail2ban-1.1.0_1:
+On install:
+Please do not edit the fail2ban.conf, jail.conf, or any other
+files in the distributen as they will be overwritten upon each
+upgrade of the port. Instead, create new files named *.local e.g.
+fail2ban.local or jail.local.
+
+解释：请勿编辑 fail2ban.conf、jail.conf 或其他分发包中的文件，因为它们在每次 port 升级时都会被覆盖。
+请改为创建新的 *.local 文件，例如 fail2ban.local 和 jail.local。
+
+For more information, see the official manual:
+http://www.fail2ban.org/wiki/index.php/MANUAL_0_8#Configuration
+
+If you have custom filters or actions and you are upgrading from
+0.9.x please check them.
+
+Users of pf: please read the notes in action.d/pf.conf and the
+discussion at https://github.com/fail2ban/fail2ban/pull/1925
+Please note that fail2ban will put curly braces '{}' around the
+ports in the action so you shouldn't do it yourself.
+
+解释：Fail2Ban 会自动在操作中的端口周围添加大括号 {}，因此无需手动添加。
+```
+
+## Fail2Ban 封禁配置
+
+配置实例在 `/usr/local/etc/fail2ban/jail.conf`（勿直接编辑，参见上文）。仅列出本文所需内容：
+
+```ini
+# DEFAULT 是全局定义的配置，之后每个 jail 都可以单独覆盖这些设置。
+
+[DEFAULT]
+
+# bantime = 1h
+# 封禁时间
+
+[sshd]
+enabled = true
+#
+# 参见 jail.conf(5)
+
+# "filter" 定义了 jail 所使用的过滤器。 ①
+# 在默认情况下，jail 的名称与其过滤器名称相匹配。
+#
+filter = %(__name__)s[mode=%(mode)s]
+# 例如：
+filter = sshd[mode=aggressive]
+#  
+# 操作快捷方式。用于定义 action 参数。  
+
+# Fail2Ban 还需要防火墙来执行封禁动作。
+# 默认封禁操作（例如 iptables、iptables-new、iptables-multiport、shorewall 等）。 ②
+# 它用于定义 action_* 变量，可以在 jail.local 文件的全局或特定部分中覆盖。  
+banaction = iptables-multiport  
+banaction_allports = iptables-allports  
+```
+
+-  ① 可用的过滤器名称：
+
+```sh
+root@ykla:/home/ykla # ls /usr/local/etc/fail2ban/filter.d/
+……省略一部分输出……
+assp.conf			lighttpd-auth.conf		selinux-ssh.conf
+asterisk.conf			mongodb-auth.conf		sendmail-auth.conf
+bitwarden.conf			monit.conf			sendmail-reject.conf
+botsearch-common.conf		monitorix.conf			sieve.conf
+bsd-sendmail.conf		mssql-auth.conf			slapd.conf
+bsd-sshd.conf			murmur.conf			softethervpn.conf
+bsdftp.conf			mysqld-auth.conf		sogo-auth.conf
+courier-auth.conf		nginx-botsearch.conf		sshd.conf
+```
+
+需要注意，以 `bsd-` 开头的文件（如 `bsd-sshd.conf`）是 FreeBSD Port 维护者打的补丁。但是疏于维护？应该直接使用 `sshd.conf`。已经报告 bug。[security/py-fail2ban: Is it possible to remove patch-config_filter.d_bsd-sshd.conf from py-fail2ban?](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285647)
+
+-  ② 查看 Fail2Ban 支持的防火墙：
+
+```sh
+# ls /usr/local/etc/fail2ban/action.d/
+bsd-ipfw.conf				ipfw.conf				ipfilter.conf
+……省略其他防火墙……
+```
+
+
+整理如下：
+
+创建并编辑文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf`，写入如下内容：
+
+```ini
+[sshd]
+enabled=true
+filter=sshd
+action=ipfw
+```
+
+## 配置防火墙 
+
+
+### PF
+
+- 设置启动项
+
+```sh
+# service pf enable
+```
+
+
 
