--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -53,6 +53,8 @@ ports in the action so you shouldn't do it yourself.
 
 ## Fail2Ban 封禁配置
 
+### 配置解释
+
 配置实例在 `/usr/local/etc/fail2ban/jail.conf`（勿直接编辑，参见上文）。仅列出本文所需内容：
 
 ```ini
@@ -110,7 +112,7 @@ bsd-ipfw.conf				ipfw.conf				ipfilter.conf
 ```
 
 
-整理如下：
+### Fail2Ban 封禁配置
 
 创建并编辑文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf`，写入如下内容：
 
