--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -51,9 +51,7 @@ ports in the action so you shouldn't do it yourself.
 解释：Fail2Ban 会自动在操作中的端口周围添加大括号 {}，因此无需手动添加。
 ```
 
-## Fail2Ban 封禁配置
-
-### 配置解释
+## Fail2Ban 配置解释
 
 配置实例在 `/usr/local/etc/fail2ban/jail.conf`（勿直接编辑，参见上文）。仅列出本文所需内容：
 
@@ -62,11 +60,23 @@ ports in the action so you shouldn't do it yourself.
 
 [DEFAULT]
 
-# bantime = 1h
-# 封禁时间
+# "ignoreip" 可以是一个 IP 地址、CIDR 子网掩码或 DNS 主机的列表。Fail2ban  
+# 不会封禁与该列表中地址匹配的主机。可以使用空格（和/或逗号）分隔符定义多个地址。
+# ignoreip = 127.0.0.1/8 ::1
+
+# "maxretry" 默认重试次数
+maxretry = 5
+
+# 如果主机在过去的 "findtime" 秒内产生了 "maxretry" 次失败，主机将被封禁。
+# 即定义封禁频率。
+findtime  = 10m
+
+# "bantime" 是主机被封禁的时间，单位为秒的整数或时间缩写格式（m - 分钟，h - 小时，d - 天，w - 周，mo - 月，y - 年）。  
+# 即多长时间后可重试。
+bantime  = 10m
 
 [sshd]
-enabled = true
+# enabled = true
 #
 # 参见 jail.conf(5)
 
@@ -75,15 +85,15 @@ enabled = true
 #
 filter = %(__name__)s[mode=%(mode)s]
 # 例如：
-filter = sshd[mode=aggressive]
+# filter = sshd[mode=aggressive]
 #  
 # 操作快捷方式。用于定义 action 参数。  
 
 # Fail2Ban 还需要防火墙来执行封禁动作。
 # 默认封禁操作（例如 iptables、iptables-new、iptables-multiport、shorewall 等）。 ②
 # 它用于定义 action_* 变量，可以在 jail.local 文件的全局或特定部分中覆盖。  
-banaction = iptables-multiport  
-banaction_allports = iptables-allports  
+# banaction = iptables-multiport  
+# banaction_allports = iptables-allports
 ```
 
 -  ① 可用的过滤器名称：
@@ -112,16 +122,27 @@ bsd-ipfw.conf				ipfw.conf				ipfilter.conf
 ```
 
 
-### Fail2Ban 封禁配置
+## Fail2Ban 封禁配置
 
 创建并编辑文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf`，写入如下内容：
 
 ```ini
+[DEFAULT]
+ignoreip=192.168.0.0/24
+maxretry = 3
+findtime = 10m
+bantime = 8h
+
 [sshd]
 enabled=true
 filter=sshd
 action=ipfw
 ```
+
+配置解释：
+
+- `192.168.0.0/24` 即 `192.168.0.0` 到 `192.168.0.254`
+
 
 ## 配置防火墙 
 
