--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -53,6 +53,10 @@ ports in the action so you shouldn't do it yourself.
 
 ## Fail2Ban 配置解释
 
+>**注意**
+>
+>这个 `jail`，不是 BSD 里那个 jail（一种容器）。这个 jail 就是“封禁”这个字面意思。
+
 配置实例在 `/usr/local/etc/fail2ban/jail.conf`（勿直接编辑，参见上文）。仅列出本文所需内容：
 
 ```ini
@@ -62,6 +66,7 @@ ports in the action so you shouldn't do it yourself.
 
 # "ignoreip" 可以是一个 IP 地址、CIDR 子网掩码或 DNS 主机的列表。Fail2ban  
 # 不会封禁与该列表中地址匹配的主机。可以使用空格（和/或逗号）分隔符定义多个地址。
+# "ignoreip" 即白名单
 # ignoreip = 127.0.0.1/8 ::1
 
 # "maxretry" 默认重试次数
@@ -101,10 +106,6 @@ filter = %(__name__)s[mode=%(mode)s]
 ```sh
 root@ykla:/home/ykla # ls /usr/local/etc/fail2ban/filter.d/
 ……省略一部分输出……
-assp.conf			lighttpd-auth.conf		selinux-ssh.conf
-asterisk.conf			mongodb-auth.conf		sendmail-auth.conf
-bitwarden.conf			monit.conf			sendmail-reject.conf
-botsearch-common.conf		monitorix.conf			sieve.conf
 bsd-sendmail.conf		mssql-auth.conf			slapd.conf
 bsd-sshd.conf			murmur.conf			softethervpn.conf
 bsdftp.conf			mysqld-auth.conf		sogo-auth.conf
@@ -136,16 +137,48 @@ bantime = 8h
 [sshd]
 enabled=true
 filter=sshd
-action=ipfw
+action=bsd-ipfw
 ```
 
 配置解释：
 
 - `192.168.0.0/24` 即 `192.168.0.0` 到 `192.168.0.254`
-
+- `bsd-ipfw` 是示例防火墙。你可自选。参见下文。**如果使用 IPFW，必须使用 `bsd-ipfw`。因为 `ipfw` 不会生效！**
 
 ## 配置防火墙 
 
+### IPFW
+
+#### 配置自启服务
+
+```sh
+# sysrc firewall_enable="YES"
+```
+
+>**警告**
+>
+>**不要** 顺手 `start` 了。否则你将连不上 ssh 了。
+
+#### 默认允许通过
+
+- IPFW 规则是“默认拒绝”，我们改成“默认允许”
+
+```sh
+# echo net.inet.ip.fw.default_to_accept="1" >> /boot/loader.conf
+# reboot # 重启生效
+```
+- 查看 IPFW 规则
+
+```sh
+# ipfw list
+……省略一部分……
+65535 allow ip from any to any
+```
+
+
+#### 参考文献
+
+- [man ipfw(8)](https://man.freebsd.org/cgi/man.cgi?ipfw(8))，man 页面
 
 ### PF
 
@@ -155,5 +188,58 @@ action=ipfw
 # service pf enable
 ```
 
+## 测试效果
 
+- 测试主动拉黑 IP 以查看效果
 
+```sh
+# fail2ban-client set sshd banip 192.168.179.1
+```
+
+- TTY 输出
+
+```sh
+Mar 25 15:27:B8 gkla sshd[970]: error : maximum authentication attempts exceeded for ykla from 192.168.179.1 port 8652 ssh2 [ preauth ]
+```
+
+已经链接的 ssh 服务也会被强制断开。
+
+### 查看状态
+
+```sh
+# fail2ban-client status sshd
+Status for the jail: sshd
+|- Filter
+|  |- Currently failed:	1
+|  |- Total failed:	4
+|  `- File list:	/var/log/auth.log
+`- Actions
+   |- Currently banned:	1
+   |- Total banned:	1
+   `- Banned IP list:	192.168.179.1
+```
+
+### 解禁 IP
+
+```sh
+# fail2ban-client set sshd unbanip 192.168.179.1
+1
+# fail2ban-client status sshd
+Status for the jail: sshd
+|- Filter
+|  |- Currently failed:	1
+|  |- Total failed:	4
+|  `- File list:	/var/log/auth.log
+`- Actions
+   |- Currently banned:	0
+   |- Total banned:	1
+   `- Banned IP list:
+```
+
+## 故障排除
+
+- `fail2ban` 的日志在 `/var/log/fail2ban.log`
+
+## 参考文献
+
+- [fail2ban](https://dapeng.li/learning/fail2ban/d4.html)，本文架构基于此
