--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -143,7 +143,11 @@ action=bsd-ipfw
 配置解释：
 
 - `192.168.0.0/24` 即 `192.168.0.0` 到 `192.168.0.254`
-- `bsd-ipfw` 是示例防火墙。你可自选。参见下文。**如果使用 IPFW，必须使用 `bsd-ipfw`。因为 `ipfw` 不会生效！**
+- `bsd-ipfw` 是示例防火墙。你可自选。参见下文。
+
+>**警告**
+>
+>若你使用 IPFW，则必须使用 `bsd-ipfw`。因为 `ipfw` 不会生效！**
 
 ## 配置防火墙 
 
@@ -182,11 +186,20 @@ action=bsd-ipfw
 
 ### PF
 
-- 设置启动项
+#### fail2ban 配置文件
+
+将上方配置文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf` 中 `action=bsd-ipfw` 改为 `action=pf`，其他不需要改。
+
+#### 服务
 
 ```sh
+# kldload pf
+# cp /usr/share/examples/pf/pf.conf /etc # 复制实例文件，否则 PF 无法启动
 # service pf enable
+# service pf start
 ```
+
+
 
 ## 测试效果
 
