--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -188,18 +188,37 @@ action=bsd-ipfw
 
 #### fail2ban 配置文件
 
-将上方配置文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf` 中 `action=bsd-ipfw` 改为 `action=pf`，其他不需要改。
+将上方配置文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf` 中 `action=bsd-ipfw` 改为 `action = pf[port={22 23}, name=ssh]`，其他不需要改。
 
 #### 服务
 
 ```sh
 # kldload pf
-# cp /usr/share/examples/pf/pf.conf /etc # 复制实例文件，否则 PF 无法启动
+# cp /usr/share/examples/pf/pf.conf /etc # 复制示例文件，否则 PF 无法启动
 # service pf enable
 # service pf start
 ```
 
+#### 表
 
+编辑  `/etc/pf.conf`，写入：
+
+```ini
+table <f2b> persist
+anchor "f2b/*"
+block drop in log quick on em0 from <f2b> to any
+```
+##### 参考文献
+
+- [fail2ban does not feed pf table](https://forums.freebsd.org/threads/fail2ban-does-not-feed-pf-table.67798/)
+- [Fail2ban on FreeBSD drops complete pf firewall rules](https://github.com/fail2ban/fail2ban/issues/1915)
+
+#### 测试 pf
+
+```sh
+root@ykla:/home/ykla # pfctl -a "f2b/sshd" -t f2b-sshd -Ts
+   192.168.179.1
+```
 
 ## 测试效果
 
