--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -183,6 +183,7 @@ action=bsd-ipfw
 #### 参考文献
 
 - [man ipfw(8)](https://man.freebsd.org/cgi/man.cgi?ipfw(8))，man 页面
+- [fail2ban](https://dapeng.li/learning/fail2ban/d4.html)，本节架构基于此
 
 ### PF
 
@@ -193,13 +194,13 @@ action=bsd-ipfw
 #### 服务
 
 ```sh
-# kldload pf
-# cp /usr/share/examples/pf/pf.conf /etc # 复制示例文件，否则 PF 无法启动
-# service pf enable
-# service pf start
+# kldload pf # 加载内核模块，后边就不需要了
+# cp /usr/share/examples/pf/pf.conf /etc # 复制示例文件，否则 PF 无法启动。
+# service pf enable # 开机自启
+# service pf start # 启动 PF 防火墙！
 ```
 
-#### 表
+#### 修改 PF 配置文件
 
 编辑  `/etc/pf.conf`，写入：
 
@@ -208,6 +209,9 @@ table <f2b> persist
 anchor "f2b/*"
 block drop in log quick on em0 from <f2b> to any
 ```
+
+- `em0`：上面的 `em0` 是我的网卡名，你要改成你自己的。
+
 ##### 参考文献
 
 - [fail2ban does not feed pf table](https://forums.freebsd.org/threads/fail2ban-does-not-feed-pf-table.67798/)
@@ -219,6 +223,29 @@ block drop in log quick on em0 from <f2b> to any
 root@ykla:/home/ykla # pfctl -a "f2b/sshd" -t f2b-sshd -Ts
    192.168.179.1
 ```
+
+### IPFILTER (IPF)
+
+#### fail2ban 配置文件
+
+将上方配置文件 `/usr/local/etc/fail2ban/jail.d/sshd.conf` 中 `action=bsd-ipfw` 改为 `action=ipfilter`，其他不需要改。
+
+#### 服务
+
+- 复制示例文件作为默认配置规则集文件，否则 ipfilter 启动后会没有规则。示例文件自带的规则不影响使用
+
+```sh
+# cp /usr/share/examples/ipfilter/ipf.conf.sample /etc/ipf.rules
+```
+
+- 启动 ipfilter
+
+```sh
+# service ipfilter enable
+# service ipfilter start
+```
+
+即可。~~终于不用再配置了，默认就可以用~~
 
 ## 测试效果
 
@@ -272,6 +299,5 @@ Status for the jail: sshd
 
 - `fail2ban` 的日志在 `/var/log/fail2ban.log`
 
-## 参考文献
 
-- [fail2ban](https://dapeng.li/learning/fail2ban/d4.html)，本文架构基于此
+
