--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -1,4 +1,4 @@
-# 第 15.5 节 Fail2Ban
+# 第 15.5 节 Fail2Ban（基于 IPFW、PF、IPF）
 
 根据开发者[官方说明](https://github.com/fail2ban/fail2ban)，Fail2Ban 可封禁多次身份验证错误的主机，[即通过更新系统防火墙规则来拒绝来自那些 IP 地址的新连接](https://github.com/fail2ban/fail2ban/wiki/How-fail2ban-works)。Fail2Ban 几乎完全由 Python 写就（Python 96.0%）。
 
