--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -47,8 +47,6 @@ Users of pf: please read the notes in action.d/pf.conf and the
 discussion at https://github.com/fail2ban/fail2ban/pull/1925
 Please note that fail2ban will put curly braces '{}' around the
 ports in the action so you shouldn't do it yourself.
-
-解释：Fail2Ban 会自动在操作中的端口周围添加大括号 {}，因此无需手动添加。
 ```
 
 ## Fail2Ban 配置解释
@@ -147,7 +145,7 @@ action=bsd-ipfw
 
 >**警告**
 >
->若你使用 IPFW，则必须使用 `bsd-ipfw`。因为 `ipfw` 不会生效！**
+>若你使用 IPFW，则必须使用 `bsd-ipfw`。因为 `ipfw` 不会生效！
 
 ## 配置防火墙 
 
