--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -1,37 +1,27 @@
 # 第 12.5 节 Grub & UEFI 与 efibootmgr
 
-> **注意**
->
-> 本书中所有 `grub` 均为 `grub2`。
 
-## Grub
 
-目前测试 `grub` 无法直接引导 FreeBSD 的内核从而启动系统。只能采取 `chainlain+1` 的方式间接引导。
+## 判断当前系统使用 UEFI 与否
 
+ ```sh
+ # efibootmgr # 默认自带、无需安装。
+ efibootmgr: efi variables not supported on this system. root? kldload efirt?
+ ```
+
+ 如果当前系统是 UEFI，efibootmgr 则输出：
+ 
 ```sh
-menuentry "FreeBSD-13.0 Release" {
-set root='(hd0,gpt1)'  # 请自己检查
-chainloader /boot/boot1.efi
-}
+# efibootmgr # 默认自带、无需安装。
+Boot to FW : false
+BootCurrent: 0004
+BootOrder  : 0004, 0000, 0001, 0002, 0003
++Boot0004* FreeBSD
+Boot0000* EFI VMware Virtual SCSI Hard Drive (0.0)
+Boot0001* EFI VMware Virtual IDE CDROM Drive (IDE 1:0)
+Boot0002* EFI Network
+Boot0003* EFI Internal Shell (Unsupported option)
 ```
-
-### 参考资料
-
-- [Working GRUB configuration for UEFI booting FreeBSD](https://unix.stackexchange.com/questions/354260/working-grub-configuration-for-uefi-booting-freebsd)
-- [Trying to boot FBSD13 via grub2](https://www.reddit.com/r/freebsd/comments/q4qgq9/trying_to_boot_fbsd13_via_grub2/)
-
-目前配置的报错报错（`grub2-efi` FBSD 14.2）：
-
-```sh
-# grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
-grub-install: error: relocation 0x4 is not implemented yet.
-root@ykla:~ # grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
-Installing for x86_64-efi platform.
-grub-install: error: unknown filesystem.
-```
-
-加参数 `-vvv`，可以看到一长串报错。太长了，输出放在 <https://gist.github.com/ykla/9b6de6c8d4eee524840acb9981bf850a>
-
 
 
 ## EFI 分区删除与重建（存在疑问）
@@ -186,3 +176,32 @@ BootOrder  : 0000, 0001, 0002, 0003
 - [efibootmgr 无法添加 UEFI 启动项](https://bbs.archlinuxcn.org/viewtopic.php?id=12914)，这个简明扼要
 - [efibootmgr(8)](https://man.freebsd.org/cgi/man.cgi?efibootmgr(8))，FreeBSD man 手册，英文
 - [深入掌握 efibootmgr 操作要领安全删除启动项方法解析](https://my.oschina.net/emacs_8861834/blog/17450288)，详细说明，但并非都适用于 BSD
+
+
+## Grub
+
+目前测试 `grub` 无法直接引导 FreeBSD 的内核从而启动系统。只能采取 `chainlain+1` 的方式间接引导。
+
+```sh
+menuentry "FreeBSD-13.0 Release" {
+set root='(hd0,gpt1)'  # 请自己检查
+chainloader /boot/boot1.efi
+}
+```
+
+### 参考资料
+
+- [Working GRUB configuration for UEFI booting FreeBSD](https://unix.stackexchange.com/questions/354260/working-grub-configuration-for-uefi-booting-freebsd)
+- [Trying to boot FBSD13 via grub2](https://www.reddit.com/r/freebsd/comments/q4qgq9/trying_to_boot_fbsd13_via_grub2/)
+
+目前配置的报错报错（`grub2-efi` FBSD 14.2）：
+
+```sh
+# grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
+grub-install: error: relocation 0x4 is not implemented yet.
+root@ykla:~ # grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
+Installing for x86_64-efi platform.
+grub-install: error: unknown filesystem.
+```
+
+加参数 `-vvv`，可以看到一长串报错。太长了，输出放在 <https://gist.github.com/ykla/9b6de6c8d4eee524840acb9981bf850a>
