--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -9,7 +9,7 @@
  efibootmgr: efi variables not supported on this system. root? kldload efirt?
  ```
 
- 如果当前系统是 UEFI，efibootmgr 则输出：
+ 如果当前系统是 UEFI，efibootmgr 则输出类似于：
  
 ```sh
 # efibootmgr # 默认自带、无需安装。
