更新 di-16.1-jie-ftp-fu-wu-qi.md

--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -31,7 +31,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 > **注意**
 >
->关于 mysql 的基本设置请看其他章节**
+>关于 mysql 的基本设置请看其他章节
 
 
 ### 配置 /usr/local/etc/pure-ftpd.conf 文件
