--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -2,36 +2,28 @@
 
 FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建服务器可以快速传输文件。
 
-## pure-ftpd（以 MySQL 支持为例）
+## pure-ftpd（基于 MySQL）
 
 > **警告**
 >
-> **对于 RFC 2640 的支持已经被移除，所以 Windows 下的非英文的文件上传至 FTP 会乱码，见** [**https://www.pureftpd.org/project/pure-ftpd/news/**](https://www.pureftpd.org/project/pure-ftpd/news/) **无法解决，同时不建议把 Windows 的系统编码改为 UTF8，会造成更多乱码的发生，比如 zip 文件。**
-
-> **注意**
->
->本示例基于 mysql 5.x。请自行安装 mysql，理论上兼容 mysql 5.x、8.x。
+> 对于 RFC 2640 的支持已经被移除，所以 Windows 下的非英文的文件上传至 FTP 会乱码，见 [https://www.pureftpd.org/project/pure-ftpd/news/](https://www.pureftpd.org/project/pure-ftpd/news/) 。无法解决，同时不建议把 Windows 的系统编码改为 UTF8，会造成更多乱码的发生，比如 zip 文件。
 
 ### 安装
 
 由于 pkg 包不带有数据库支持功能，所以需要通过 ports 来安装该软件：
 
 ```sh
-# /usr/ports/ftp/pure-ftpd
-# make config-recursive
+# cd /usr/ports/ftp/pure-ftpd
+# make config
 ```
 
-选中 mysql，其余保持默认选项回车即可：
+选中 `MYSQL`，其余保持默认选项回车即可：
 
 ![](../.gitbook/assets/PureFTPD.png)
 
 ```sh
-# make install clean
+# make BATCH=yes install clean
 ```
-
-> **注意**
->
->关于 mysql 的基本设置请看其他章节
 
 
 ### 配置 /usr/local/etc/pure-ftpd.conf 文件
@@ -45,7 +37,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 #### 编辑配置文件并增加 mysql 的支持
 
-```sh
+```ini
 #兼容 ie 等非正规化的 ftp 客户端
 
 BrokenClientsCompatibility yes
@@ -62,16 +54,21 @@ AllowUserFXP yes
 # 用户主目录不存在的话，自动创建。
 CreateHomeDir yes
 
-# MySQL configuration file (see README.MySQL)
+# MySQL 配置文件（参见 README.MySQL）
 
 MySQLConfigFile /usr/local/etc/pureftpd-mysql.conf
 ```
 
 ### 配置 mysql
 
+> **注意**
+>
+>本文基于 mysql 8.x。关于 mysql 的基本设置请看其他章节。
+
+
 #### 创建数据库
 
-```sh
+```sql
 create database pureftp;
 use pureftp;
 DROP TABLE IF EXISTS `users`;
@@ -97,8 +94,8 @@ INSERT INTO `users` VALUES ('demo', 'demo&2022*', 2002, 2000, '/home/www/demo', 
 
 #### 创建登录数据库用户及设置密码
 
-```sh
-grant select,insert,update,delete on pureftp.* to pftp@localhost identified by "Ab123456&";
+```sql
+grant select,insert,update,delete on pureftp.* to pftp@localhost identified by "abc123";
 ```
 
 ### 配置 /usr/local/etc/pureftpd-mysql.conf
@@ -135,7 +132,7 @@ MYSQLUser pftp
 
 # Mandatory : user password. You must have a password.
 
-MYSQLPassword Ab123456&
+MYSQLPassword abc123
 
 
 # Mandatory : database to open.
