--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -25,8 +25,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 # make BATCH=yes install clean
 ```
 
-
-### 配置 /usr/local/etc/pure-ftpd.conf 文件
+### 配置 `/usr/local/etc/pure-ftpd.conf` 文件
 
 #### 生成配置文件
 
