--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -2,11 +2,11 @@
 
 FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建服务器可以快速传输文件。
 
-## pure-ftpd（基于 MySQL）
+## Pure-FTPd（基于 MySQL）
 
 > **警告**
 >
-> 对于 RFC 2640 的支持已经被移除，所以 Windows 下的非英文的文件上传至 FTP 会乱码，见 [https://www.pureftpd.org/project/pure-ftpd/news/](https://www.pureftpd.org/project/pure-ftpd/news/) 。无法解决，同时不建议把 Windows 的系统编码改为 UTF8，会造成更多乱码的发生，比如 zip 文件。
+> Pure-FTPd 已经移除了对 [RFC 2640](https://github.com/comehope/rfc-translation/blob/master/rfc-2640-cn.pdf) 的支持，所以 Windows 下的非英文的文件上传至 FTP 会乱码，见 [https://www.pureftpd.org/project/pure-ftpd/news/](https://www.pureftpd.org/project/pure-ftpd/news/) 。无法解决，同时不建议把 Windows 的系统编码改为 UTF8，会造成更多乱码的发生，比如 zip 文件。
 
 ### 安装
 
