--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
@@ -18,8 +18,6 @@
 # make install clean
 ```
 
-
-
 ### MySQL 8.4 LTS
 
 安装：
@@ -59,8 +57,9 @@ it exits with status 0 unconditionally.
 ## 启动服务
 
 ```sh
-# sysrc mysql_enable="YES"
-# service  mysql-server start
+# service mysql-server enable
+mysql enabled in /etc/rc.conf
+# service mysql-server start
 Starting mysql.
 ```
 
@@ -88,7 +87,7 @@ root@localhost [(none)]>
 
 ## 修改密码
 
-设置密码为 `z`，然后刷新权限。
+设置数据库的 root 密码为 `z`，然后刷新权限，随后退出。
 
 ```sh
 root@localhost [(none)]> alter user 'root'@'localhost' identified by 'z';
@@ -96,13 +95,14 @@ Query OK, 0 rows affected (0.02 sec)
 
 root@localhost [(none)]> flush privileges;
 Query OK, 0 rows affected (0.00 sec)
+
+root@localhost [(none)]> quit;
+Bye
 ```
 
 重新登录：
 
 ```sql
-root@localhost [(none)]> quit;
-Bye
 root@ykla:~ # mysql -uroot -p
 Enter password:
 Welcome to the MySQL monitor.  Commands end with ; or g.
