--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -10,7 +10,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 ### 安装
 
-由于 pkg 包不带有数据库支持功能，所以需要通过 ports 来安装该软件：
+由于 pkg 包没有数据库支持功能，所以需要通过 ports 来安装该软件：
 
 ```sh
 # cd /usr/ports/ftp/pure-ftpd
@@ -36,19 +36,25 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 #### 编辑配置文件并增加 mysql 的支持
 
+配置 `/usr/local/etc/pure-ftpd.conf` 文件，以下项目修改如下：
+
 ```ini
-#兼容 ie 等非正规化的 ftp 客户端
+# 兼容 ie 等非正规化的 ftp 客户端
 
 BrokenClientsCompatibility yes
 
 # 被动连接响应的端口范围。
 PassivePortRange 30000 50000
 
-# 认证用户允许登陆的最小组 ID（UID）。
+# 允许认证用户登录的最小 UID。
+# 例如，值为 100 会阻止所有 UID 小于 100 的用户登录。
+# 如果您希望 root 能够登录，请使用 0。
 MinUID 2000
 
 # 仅允许认证用户进行 FXP 传输。
 AllowUserFXP yes
+
+# AntiWarez                    yes
 
 # 用户主目录不存在的话，自动创建。
 CreateHomeDir yes
@@ -62,14 +68,15 @@ MySQLConfigFile /usr/local/etc/pureftpd-mysql.conf
 
 > **注意**
 >
->本文基于 mysql 8.x。关于 mysql 的基本设置请看其他章节。
+>本文基于 mysql 8.x。关于 mysql 的安全、基本设置请看其他章节。
 
+请自行安装配置 mysql 8.x。
 
 #### 创建数据库
 
 ```sql
-create database pureftp;
-use pureftp;
+create database pureftpd;
+use pureftpd;
 DROP TABLE IF EXISTS `users`;
 CREATE TABLE `users` (
    `User` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
@@ -94,58 +101,65 @@ INSERT INTO `users` VALUES ('demo', 'demo&2022*', 2002, 2000, '/home/www/demo', 
 #### 创建登录数据库用户及设置密码
 
 ```sql
-grant select,insert,update,delete on pureftp.* to pftp@localhost identified by "abc123";
+CREATE USER 'pftp'@'localhost' IDENTIFIED BY 'abc123';
+GRANT SELECT, INSERT, UPDATE, DELETE ON pureftpd.* TO 'pftp'@'localhost';
+flush privileges;
 ```
 
-### 配置 /usr/local/etc/pureftpd-mysql.conf
+测试数据库链接：
 
 ```sh
+# mysql -u pftp -p -h localhost pureftpd
+```
+
+### 配置 `/usr/local/etc/pureftpd-mysql.conf`
+
+完整示例：
+
+```sh
+
 ##############################################
-# #
+#                                            #
 # Sample Pure-FTPd Mysql configuration file. #
-# See README.MySQL for explanations. #
-# #
+# See README.MySQL for explanations.         #
+#                                            #
 ##############################################
 
 
 # Optional : MySQL server name or IP. Don't define this for unix sockets.
 
-# MYSQLServer 127.0.0.1
-MYSQLServer localhost
+MYSQLServer     127.0.0.1
 
 
 # Optional : MySQL port. Don't define this if a local unix socket is used.
 
-MYSQLPort 3306
+MYSQLPort       3306
 
 
 # Optional : define the location of mysql.sock if the server runs on this host.
 
-MYSQLSocket /var/run/mysqld/mysqld.sock
+MYSQLSocket     /var/run/mysqld/mysqld.sock
 
 
 # Mandatory : user to bind the server as.
 
-MYSQLUser pftp
+MYSQLUser       pftp
 
 
 # Mandatory : user password. You must have a password.
 
-MYSQLPassword abc123
+MYSQLPassword   abc123
 
 
 # Mandatory : database to open.
 
-MYSQLDatabase pureftpd
+MYSQLDatabase   pureftpd
 
 
 # Mandatory : how passwords are stored
-# Valid values are : "cleartext", "argon2", "scrypt", "crypt", "sha1", "md5",password" and "any"
+# Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
 
-# ("password" = MySQL password() function, which is sha1(sha1(password)))
-
-#MYSQLCrypt scrypt
-MYSQLCrypt cleartext
+MYSQLCrypt      cleartext
 
 
 # In the following directives, parts of the strings are replaced at
@@ -162,11 +176,11 @@ MYSQLCrypt cleartext
 
 # Query to execute in order to fetch the password
 
-MYSQLGetPW SELECT Password FROM users WHERE User='\L'
+MYSQLGetPW      SELECT Password FROM users WHERE User='\L'
 
 
 # Query to execute in order to fetch the system user name or uid
-MYSQLGetUID SELECT Uid FROM users WHERE User='\L'
+MYSQLGetUID     SELECT Uid FROM users WHERE User='\L'
 
 
 # Optional : default UID - if set this overrides MYSQLGetUID
@@ -176,7 +190,7 @@ MYSQLDefaultUID 2000
 
 # Query to execute in order to fetch the system user group or gid
 
-MYSQLGetGID SELECT Gid FROM users WHERE User='\L'
+MYSQLGetGID     SELECT Gid FROM users WHERE User='\L'
 
 
 # Optional : default GID - if set this overrides MYSQLGetGID
@@ -186,20 +200,20 @@ MYSQLDefaultGID 2000
 
 # Query to execute in order to fetch the home directory
 
-MYSQLGetDir SELECT Dir FROM users WHERE User='\L'
+MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 
 
-# Optional : query to get the maximal number of files
+# Optional : query to get the maximal number of files 
 # Pure-FTPd must have been compiled with virtual quotas support.
 
-# MySQLGetQTAFS SELECT QuotaFiles FROM users WHERE User='\L'
+# MySQLGetQTAFS  SELECT QuotaFiles FROM users WHERE User='\L'
 
 
 # Optional : query to get the maximal disk usage (virtual quotas)
 # The number should be in Megabytes.
 # Pure-FTPd must have been compiled with virtual quotas support.
 
-# MySQLGetQTASZ SELECT QuotaSize FROM users WHERE User='\L'
+# MySQLGetQTASZ  SELECT QuotaSize FROM users WHERE User='\L'
 
 
 # Optional : ratios. The server has to be compiled with ratio support.
@@ -233,34 +247,35 @@ MYSQLGetDir SELECT Dir FROM users WHERE User='\L'
 ### 添加 ftp 组和用户
 
 ```sh
-# pw groupadd ftpgroup -g 2000
-# pw useradd ftpuser -u 2001 -g 2000
-```
-
-或
-
-```sh
-# pw useradd ftpuser -u 2001 -g 2000 -s /sbin/nologin -w no -d /home/vftp -c "VirtualUser Pure-FTPd" -m
+# pure-pw useradd ftpuser -u 2000 -g 2000 -d /home/ftpusers/
+Password:
+Enter it again:
+# pure-pw mkdb
+# pure-pw list
+ftpuser             /home/ftpusers/./
 ```
 
 ### 配置 FTP 目录
 
 ```sh
-# mkdir /home/www/pureftp
-# chown -R ftpuser /home/www/
-# chgrp -R ftpgroup /home/www/
+# chown -R ftpuser /home/ftpusers/ftpuser/
+# chgrp -R ftpgroup /home/ftpusers/ftpuser/
 ```
 
 ### 服务操作
 
 ```sh
-# sysrc pureftpd_enable="YES"
-# service pure-ftpd start   #启动服务器
-# service pure-ftpd stop    #停止服务
-# service pure-ftpd restart #重启服务
+# service pure-ftpd enable  # 添加服务
+# service pure-ftpd start   # 启动服务器
+# service pure-ftpd stop    # 停止服务
+# service pure-ftpd restart # 重启服务
 ```
 
-## proftpd（以 mysql 支持为例）
+### 故障排除
+
+- Pure-FTPd 日志在 `/var/log/messages`。
+
+## proftpd（基于 mysql）
 
 ### 安装 proftpd（以 mysql 支持为例）
 
