--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -95,7 +95,7 @@ CREATE TABLE `users` (
    `dlratio` int(255) NULL DEFAULT 1,
    PRIMARY KEY (`User`) USING BTREE
 ) ENGINE = InnoDB CHARACTER SET = utf8mb4 COLLATE = utf8mb4_general_ci ROW_FORMAT = Dynamic;
-INSERT INTO `users` VALUES ('demo', 'demo&2022*', 2002, 2000, '/home/www/demo', 500, 30, 80, 80, '*', NULL, NULL, 1, 1);
+INSERT INTO `users` VALUES ('demo', 'demo&2022*', 2002, 2000, '/home/ftpusers', 500, 30, 80, 80, '*', NULL, NULL, 1, 1);
 ```
 
 #### 创建登录数据库用户及设置密码
@@ -159,7 +159,7 @@ MYSQLDatabase   pureftpd
 # Mandatory : how passwords are stored
 # Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
 
-MYSQLCrypt      cleartext
+MYSQLCrypt      crypt
 
 
 # In the following directives, parts of the strings are replaced at
@@ -247,7 +247,7 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 ### 添加 ftp 组和用户
 
 ```sh
-# pure-pw useradd ftpuser -u 2000 -g 2000 -d /home/ftpusers/
+# pure-pw useradd ftpuser2 -u 2001 -g 2001 -d /home/ftpusers2/
 Password:
 Enter it again:
 # pure-pw mkdb
@@ -255,11 +255,26 @@ Enter it again:
 ftpuser             /home/ftpusers/./
 ```
 
-### 配置 FTP 目录
-
 ```sh
-# chown -R ftpuser /home/ftpusers/ftpuser/
-# chgrp -R ftpgroup /home/ftpusers/ftpuser/
+root@ykla:/ # pure-pw show ftpuser
+
+Login              : ftpuser
+Password           : $argon2id$v=19$m=8192,t=255,p=1$NBGoWqBK4vFiR/q23yXCKw$za3YI29bek9plHT2HqVjWHWRUUQSg4KKKKLcYrDnQ+0
+UID                : 2000 (-)
+GID                : 2000 (ftpgroup)
+Directory          : /home/ftpusers/./
+Full name          :
+Download bandwidth : 0 Kb (unlimited)
+Upload   bandwidth : 0 Kb (unlimited)
+Max files          : 0 (unlimited)
+Max size           : 0 Mb (unlimited)
+Ratio              : 0:0 (unlimited:unlimited)
+Allowed local  IPs :
+Denied  local  IPs :
+Allowed client IPs :
+Denied  client IPs :
+Time restrictions  : 0000-0000 (unlimited)
+Max sim sessions   : 0 (unlimited)
 ```
 
 ### 服务操作
